--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,58 @@
         {% endblock %}
     </head>
     <body>
+            <nav class="py-2 bg-dark border-bottom">
+                <div class="container d-flex flex-wrap">
+
+                    <div class="dropdown">
+                        <a class="nav nav-link dropdown-toggle text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Ikare
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonAdminDashboard">
+                          <li><a class="dropdown-item" href="{{path('admin')}}">Tableau de board</a></li>
+                          <li><a class="dropdown-item" href="#">Menu</a></li>
+                        </ul>
+                      </div>
+
+                      <div class="dropdown">
+                        <a class="nav nav-link dropdown-toggle text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Ajouter
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonAdminAdd">
+                          <li><a class="dropdown-item" href="#">Article</a></li>
+                          <li><a class="dropdown-item" href="#">Page</a></li>
+                        </ul>
+                      </div>
+                </div>
+            </nav>
+
+            <div class="container">
+                <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+                    <a class="d-flex align-items-center mb-3 mb-mb-0 me-md-auto text-dark text-dark text-decoration-none" href="{{path('app_home')}}">
+                        <span class="fs-4">Mon Blog</span>
+                    </a>
+
+                    <ul class="nav nav-pills">
+
+                          <li class="nav-item">
+                            <a class="nav-link text-dark"  href="#">s'inscrire</a>
+                          </li>
+                          
+                          <li class="nav-item">
+                            <a class="nav-link text-dark"  href="#">Se connecter</a>
+                          </li>  
+                    </ul>
+
+                </header>
+            </div>
         {% block body %}{% endblock %}
+
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-nd-4 d-flex d-flex align-item-center">
+                  <span class="Copyright">© {{'now'|date('Y')}} cyril.b tous droit reservés</span>
+                </div>
+            </footer>
+        </div>
     </body>
 </html>
